2008-07-28  Badlop  <badlop@process-one.net>

	* doc/mod_http_bind.tex: Update LaTeX code for section title

2008-03-12  Badlop  <badlop@process-one.net>

	* src/web/mod_http_bind.erl (start): Provide explanation in error
	message when module is already started for another vhost

2007-12-22  Badlop  <badlop@process-one.net>

	* doc/mod_http_bind.tex: Added explanation about http_bind option
	to ejabberd_http

2007-12-21  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl: Removed small warning

2007-12-20  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_bind.erl: Bugfixes

2007-12-18  Badlop  <badlop@process-one.net>

	* doc/mod_http_bind.tex: Added documentation for the ejabberd
	guide

2007-12-18  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_http_bind.erl: Removed receive_loop

2007-11-28  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl (migrate_database): Bugfix when
	table does not exist (thanks to Justin Kirby)

2007-11-27  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_bind.erl (start): Migration code for
	people using previous version of the HTTP binding
	module (EJAB-390)

	* ChangeLog: Added ChangeLog, autogenerated using svn2cl.

2007-11-15 mremond

	* *.erl: Making sure SVN properties are correctly set.

2007-11-08 badlop

	* src/web/ejabberd_http_bind.erl: ejabberd_http_bind.erl: Don't
	  overwrite the stanza namespace (thanks to Anastasia Gornostaeva).

2007-11-02 mremond

	* src/web/ejabberd_http_bind.erl: * src/web/ejabberd_http_bind.erl:
	  Support for c2s ACL access, max_stanza and shaper on http_poll
	  connections (EJAB-243, EJAB-415, EJAB-416). Requires ejabberd
	  trunk r966.

2007-11-02 mremond

	* src/web/Makefile.in: * src/web/Makefile.in: Allow compilation
	  with debug information.

2007-10-20 badlop

	* src/web/ejabberd_http_bind.erl: The function
	  Erlang/OTP function httpd_util:to_lower/1 is deprecated,